--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -80,7 +80,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO DO: Import spam dataset from yellowbrick library\n"
+    "# TO DO: Import spam dataset from yellowbrick library\n",
+    "\n",
+    "from yellowbrick.datasets import load_spam\n",
+    "X, y = load_spam()"
    ]
   },
   {
@@ -98,7 +101,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO DO: Split 10% of the data for the testing set (1 mark)\n"
+    "# TO DO: Split 10% of the data for the testing set (1 mark)\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=0)"
    ]
   },
   {
@@ -117,7 +122,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO DO: Data processing steps (if needed)\n"
+    "# TO DO: Data processing steps (if needed)\n",
+    "# we don't need any additional processing\n",
+    "# data is formatted fine"
    ]
   },
   {
@@ -140,7 +147,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO DO: Split training data into training and validation sets and fit model to training data (2 marks)\n"
+    "# TO DO: Split training data into training and validation sets and fit model to training data (2 marks)\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train_train, X_val, y_train_train, y_val = train_test_split(X_train, y_train, test_size=0.2, random_state=0)\n",
+    "model = LogisticRegression(max_iter=2000)\n",
+    "model.fit(X_train_train, y_train_train)"
    ]
   },
   {
@@ -166,7 +179,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO DO: Print classification report (1 mark)\n"
+    "# TO DO: Print classification report (1 mark)\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "y_pred = model.predict(X_val)\n",
+    "print(classification_report(y_val, y_pred))"
    ]
   },
   {
@@ -176,7 +193,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO DO: Print confusion matrix (1 mark)\n"
+    "# TO DO: Print confusion matrix (1 mark)\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "cm = confusion_matrix(y_val, y_pred)\n",
+    "sns.heatmap(cm, annot=True, fmt='d')\n",
+    "plt.show()"
    ]
   },
   {
@@ -194,7 +218,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO DO: Predict values based on new decision function threshold and print classification report (1 mark)\n"
+    "# TO DO: Predict values based on new decision function threshold and print classification report (1 mark)\n",
+    "y_pred_new_threshold = (model.decision_function(X_val) > 1).astype(int)\n",
+    "print(classification_report(y_val, y_pred_new_threshold))"
    ]
   },
   {
@@ -204,7 +230,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO DO: Print new confusion matrix (1 mark)\n"
+    "# TO DO: Print new confusion matrix (1 mark)\n",
+    "cm_new = confusion_matrix(y_val, y_pred_new_threshold)\n",
+    "sns.heatmap(cm_new, annot=True, fmt='d')\n",
+    "plt.show()"
    ]
   },
   {
@@ -273,7 +302,31 @@
    "outputs": [],
    "source": [
     "# TO DO: ADD YOUR CODE HERE FOR STEPS 3-5\n",
-    "# HINT: USING A LOOP TO STORE THE DATA IN YOUR RESULTS DATAFRAME WILL BE MORE EFFICIENT\n"
+    "# HINT: USING A LOOP TO STORE THE DATA IN YOUR RESULTS DATAFRAME WILL BE MORE EFFICIENT\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import cross_validate\n",
+    "\n",
+    "models = {\n",
+    "    \"Logistic Regression\": LogisticRegression(max_iter=2000),\n",
+    "    \"SVM\": SVC(),\n",
+    "    \"Random Forest\": RandomForestClassifier(random_state=0, max_depth=10)\n",
+    "}\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "    cv_results = cross_validate(model, X_train, y_train, cv=5, scoring='accuracy', return_train_score=True)\n",
+    "    results.append({\n",
+    "        \"Model\": name,\n",
+    "        \"Training Accuracy\": cv_results['train_score'].mean(),\n",
+    "        \"Validation Accuracy\": cv_results['test_score'].mean()\n",
+    "    })\n",
+    "\n",
+    "results_df = pd.DataFrame(results)\n",
+    "print(results_df)"
    ]
   },
   {
@@ -292,7 +345,8 @@
    "outputs": [],
    "source": [
     "# TO DO: Look at the ranges for each feature (0.5 marks)\n",
-    "# Hint: there is a built-in pandas function that you can use to view the statistics of your data\n"
+    "# Hint: there is a built-in pandas function that you can use to view the statistics of your data\n",
+    "print(X_train.describe())"
    ]
   },
   {
@@ -302,7 +356,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO DO: Implement scaling for SVM and print training and validation accuracies (1.5 marks)\n"
+    "# TO DO: Implement scaling for SVM and print training and validation accuracies (1.5 marks)\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_val_scaled = scaler.transform(X_val)\n",
+    "\n",
+    "svm_model = SVC()\n",
+    "svm_model.fit(X_train_scaled, y_train)\n",
+    "y_pred_svm = svm_model.predict(X_val_scaled)\n",
+    "\n",
+    "print(\"SVM Training Accuracy:\", svm_model.score(X_train_scaled, y_train))\n",
+    "print(\"SVM Validation Accuracy:\", svm_model.score(X_val_scaled, y_val))"
    ]
   },
   {
@@ -336,7 +403,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO DO: Train model and find predicted values for testing set using best model (1 mark)\n"
+    "# TO DO: Train model and find predicted values for testing set using best model (1 mark)\n",
+    "best_model = RandomForestClassifier(random_state=0, max_depth=10)\n",
+    "best_model.fit(X_train, y_train)\n",
+    "y_pred_test = best_model.predict(X_test)"
    ]
   },
   {
@@ -346,7 +416,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO DO: Print classification report (1 mark)\n"
+    "# TO DO: Print classification report (1 mark)\n",
+    "print(classification_report(y_test, y_pred_test))"
    ]
   },
   {
@@ -356,7 +427,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO DO: Print confusion matrix using a heatmap (1 mark)\n"
+    "# TO DO: Print confusion matrix using a heatmap (1 mark)\n",
+    "cm_best = confusion_matrix(y_test, y_pred_test)\n",
+    "sns.heatmap(cm_best, annot=True, fmt='d')\n",
+    "plt.show()"
    ]
   },
   {
@@ -425,7 +499,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO DO: Import concrete dataset from yellowbrick library (1 mark)\n"
+    "# TO DO: Import concrete dataset from yellowbrick library (1 mark)"
    ]
   },
   {
