all the cod eparts are donegit add .

--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -499,7 +499,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO DO: Import concrete dataset from yellowbrick library (1 mark)"
+    "# TO DO: Import concrete dataset from yellowbrick library (1 mark)\n",
+    "from yellowbrick.datasets import load_concrete\n",
+    "X, y = load_concrete()"
    ]
   },
   {
@@ -519,7 +521,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO DO: Process the data - fill-in any missing values and remove any non-numeric columns (0.5 marks)\n"
+    "# TO DO: Process the data - fill-in any missing values and remove any non-numeric columns (0.5 marks)\n",
+    "X = X.fillna(X.mean())"
    ]
   },
   {
@@ -537,7 +540,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO DO: Inspect the first few rows of the feature matrix (0.5 marks)\n"
+    "# TO DO: Inspect the first few rows of the feature matrix (0.5 marks)\n",
+    "print(X.head())"
    ]
   },
   {
@@ -563,7 +567,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split training and testing sets (1 mark)\n"
+    "# Split training and testing sets (1 mark)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=0)"
    ]
   },
   {
@@ -574,7 +579,24 @@
    "outputs": [],
    "source": [
     "# Test max_depths of 3, 5, 7, 9 and 11 for a decision tree model to find the best results (3 marks)\n",
-    "# Hint: It is easier if you use a loop to evaluate each max_depth\n"
+    "# Hint: It is easier if you use a loop to evaluate each max_depth\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "max_depths = [3, 5, 7, 9, 11]\n",
+    "best_score = -1\n",
+    "best_depth = 0\n",
+    "\n",
+    "for depth in max_depths:\n",
+    "    model = DecisionTreeRegressor(max_depth=depth, random_state=0)\n",
+    "    scores = cross_val_score(model, X_train, y_train, cv=5, scoring='r2')\n",
+    "    mean_score = scores.mean()\n",
+    "    if mean_score > best_score:\n",
+    "        best_score = mean_score\n",
+    "        best_depth = depth\n",
+    "\n",
+    "print(\"Best max_depth:\", best_depth)\n",
+    "print(\"Best R^2 score:\", best_score)"
    ]
   },
   {
@@ -592,7 +614,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO DO: Calculate and display training and validation accuracies for both models using default hyperparameters (3 marks)\n"
+    "# TO DO: Calculate and display training and validation accuracies for both models using default hyperparameters (3 marks)\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
+    "\n",
+    "rf_model = RandomForestRegressor(max_depth=5, random_state=0)\n",
+    "gb_model = GradientBoostingRegressor(max_depth=5, random_state=0)\n",
+    "\n",
+    "rf_scores = cross_val_score(rf_model, X_train, y_train, cv=5, scoring='r2')\n",
+    "gb_scores = cross_val_score(gb_model, X_train, y_train, cv=5, scoring='r2')\n",
+    "\n",
+    "print(\"Random Forest R^2 score:\", rf_scores.mean())\n",
+    "print(\"Gradient Boosting R^2 score:\", gb_scores.mean())"
    ]
   },
   {
@@ -620,7 +652,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO DO: Find test score using best model (1 mark)\n"
+    "# TO DO: Find test score using best model (1 mark)\n",
+    "best_model = GradientBoostingRegressor(max_depth=5, random_state=0)\n",
+    "best_model.fit(X_train, y_train)\n",
+    "test_score = best_model.score(X_test, y_test)\n",
+    "print(\"Test R^2 score:\", test_score)"
    ]
   },
   {
