--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -246,7 +246,12 @@
     "1. How did your decision impact the number of false negatives and false positives? What is a potential unintended consequence of changing the decision boundary in this context?\n",
     "1. Why did we use the validation data instead of the test data to check the new decision threshold?\n",
     "\n",
-    "*ANSWER HERE*"
+    "*ANSWER HERE*\n",
+    "In this scenario, I decided to move the threshold to increase recall. This is because I want to minimize the number of false negatives, as they are more costly in this context. It made sense to identify as many spam emails, even it was at the expense of some false positives.\n",
+    "\n",
+    "The decision boundary was moved to the right. The number of false positives was increased while it decreased the number of false negatives. Simply, more legitimate emails were incorrectly classified as spam, but fewer spam emails were allowed to slip through the filter.\n",
+    "\n",
+    "If we had used the test data, it would have risked our classification methods from overfitting. By using the validation data, we can ensure that our model is generalizable and unbiasedto unseen data."
    ]
   },
   {
@@ -443,7 +448,14 @@
     "1. Looking at the feature ranges, would a tree-based model or SVM make more sense for this dataset? Did using scaling for SVM improve the results? How did it perform compared to the random forest model?\n",
     "1. In your opinion, is it better to focus on changing the decision threshold or changing the model to improve precision/recall results? Why?\n",
     "\n",
-    "*ANSWER HERE*"
+    "*ANSWER HERE*\n",
+    "\n",
+    "I selected the Random Forest model for part 5.2. It performed better than the other models in terms of accuracy and recall.\n",
+    "\n",
+    "It makes most sense to use a tree-based model. It is less sensitive to feature ranges and scaling which helps because the features at hand aren't scaled.\n",
+    "Scaling did improve the results, however, it still performed worse than the Random Forest model.\n",
+    "\n",
+    "The decision threshold would only adjust the trade-off between precision and recall. It wouldn't exactly improve the results of the model. Changing the model as a whole allows us to imporve metrics because it changes the model's decision boundary."
    ]
   },
   {
@@ -464,7 +476,16 @@
    "id": "d0e837da",
    "metadata": {},
    "source": [
-    "*DESCRIBE YOUR PROCESS HERE - BE SPECIFIC*"
+    "*DESCRIBE YOUR PROCESS HERE - BE SPECIFIC*\n",
+    "\n",
+    "1. I used some code from the previous assingment as well as from older classes such as ENDG 319. \n",
+    "\n",
+    "1. Just in the order they were presented. I worked on completing the programming questions first and then went through to answer the written ones.\n",
+    "\n",
+    "1. I didn't have a prompt persay, however, using Cursor as a part of my IDE helped debug any issues I had.\n",
+    "\n",
+    "1. Yes. Learning how to adjust the decision threshold was a bit painful. Understaning its impact on metrics like precision and recall was still interesting, regardless of the momentarily confusing nature of the data.\n",
+    "\n"
    ]
   },
   {
@@ -689,7 +710,22 @@
    "id": "93097bfe",
    "metadata": {},
    "source": [
-    "*DESCRIBE YOUR PROCESS HERE - BE SPECIFIC*"
+    "*DESCRIBE YOUR PROCESS HERE - BE SPECIFIC*\n",
+    "\n",
+    "1. I used some code from the previous assingment as well as from older classes such as ENDG 319. The following are some other resources I used:\n",
+    "\n",
+    "https://arize.com/blog-course/r-squared-understanding-the-coefficient-of-determination/\n",
+    "\n",
+    "https://stackoverflow.com/questions/28716241/controlling-the-threshold-in-logistic-regression-in-scikit-learn\n",
+    "\n",
+    "https://www.datacamp.com/tutorial/guide-to-the-gradient-boosting-algorithm\n",
+    "\n",
+    "1. Just in the order they were presented. I worked on completing the programming questions first and then went through to answer the written ones.\n",
+    "\n",
+    "1. I didn't have a prompt persay, however, using Cursor as a part of my IDE helped debug any issues I had.\n",
+    "\n",
+    "1. Interpreting the R^2 score had its challenges. I had to look up what it was and how to use it.\n",
+    "\n"
    ]
   },
   {
@@ -713,7 +749,12 @@
    "id": "867c484f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "I really appreciate how well documented the steps were. It made it \n",
+    "really easy to follow along and understand the process. It also helps \n",
+    "to learn when i'm not exactly lost on what the next step is and why \n",
+    "I'm doing it."
+   ]
   }
  ],
  "metadata": {
