--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -8,7 +8,7 @@
     "# Assignment 3: Non-Linear Models and Validation Metrics (50 marks total)\n",
     "### Due: March 7 at 11:59pm\n",
     "\n",
-    "### Name: "
+    "### Name: Iraj Akbar"
    ]
   },
   {
